Fix spacing on start page

--- a/styles.css
+++ b/styles.css
@@ -99,3 +99,6 @@ h3.listing-title {
   background-color: #03121F !important; /* Dark gray background for even rows */
 }
 
+#listing-listing > div.list.quarto-listing-default > div.quarto-post {
+  padding-bottom: 25px; 
+}
